<resources>
    <string name="empty"></string>
    <string name="app_name">MementoApp</string>
    <string name="sign_out">Sign out</string>
    <string name="manage_mementos">Manage Mementos</string>
    <string name="manage_medication">Manage Medication</string>
    <string name="manage_objects">Manage Objects</string>
    <string name="manage_object">Manage Object</string>
    <string name="update_people">Update People</string>
    <string name="update_objects">Update Objects</string>
    <string name="update_medication">Update Medication</string>
    <string name="add_new">Add New</string>
    <string name="face">Face</string>
    <string name="object">Object</string>
    <string name="enter_name">Enter Name</string>
    <string name="medication">Medication</string>
    <string name="help_recognize">Help Recognize</string>
    <string name="add_new_person">Add New Person</string>
    <string name="add_new_medication">Add New Medication</string>
    <string name="add_new_object">Add New Object</string>
    <string name="your_people">Your People</string>
    <string name="your_medication">Your Medication</string>
    <string name="your_objects">Your Objects</string>
    <string name="object_name">Object Name</string>
    <string name="medication_name">Medication Name</string>
    <string name="instructions">Instructions</string>
    <string name="manage_person">Manage Person</string>
    <string name="camera">Camera</string>
    <string name="photos_of">Photos of:</string>
    <string name="message_will_be_here">(Message will be here)</string>
    <string name="enter_medicine_instructions">Enter medicine instructions here.</string>
    <string name="describe_obj_here">Describe object here.</string>
    <string name="description">Description</string>
    <string name="audio">Audio</string>
    <string name="update">Update</string>
    <string name="enroll">Enroll</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="image_desc1">User selected image</string>
</resources>
