<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.mementoapp.main.mementoapp.AddNewMedicationActivity">

    <EditText
        android:id="@+id/tf_AddNewMedication_Name"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/medication_name"
        app:layout_constraintRight_toLeftOf="@+id/btn_AddNewMedication_Camera"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="13dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_AddNewMedication_Camera"
        tools:layout_constraintBaseline_creator="1" />

    <ImageView
        android:id="@+id/imageView_AddNewMedication"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tf_AddNewMedication_Name"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="79dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="29dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="11dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_AddNewMedication_Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="51dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tf_AddNewMedication_Instructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/enter_medicine_instructions"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_AddNewMedication_Enroll"
        android:layout_marginEnd="48dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/tf_AddNewMedication_Name"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="61dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_AddNewMedication_Enroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enroll"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.906" />

    <TextView
        android:id="@+id/textView_labelInstructions"
        android:layout_width="144dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="18dp"
        android:text="@string/instructions"
        android:labelFor="@+id/editText_AddNewMedication_Instructions"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tf_AddNewMedication_Instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_AddNewMedication_Name"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="45dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_AddNewMedication_message"
        android:layout_width="354dp"
        android:layout_height="0dp"
        android:text="@string/message_will_be_here"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="11dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_AddNewMedication_Enroll" />
</android.support.constraint.ConstraintLayout>
