<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.mementoapp.main.mementoapp.ManagePersonActivity">

    <ListView
        android:id="@+id/listView_faceImages"
        android:layout_width="232dp"
        android:layout_height="202dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_ele"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        app:layout_constraintHorizontal_bias="0.928" />

    <TextView
        android:id="@+id/textView_PhotosOfTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photos_of"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listView_faceImages"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.63" />

    <Button
        android:id="@+id/btn_ManagePerson_AddNewImage"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:text="@string/add_new"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="412dp"
        app:layout_constraintHorizontal_bias="0.821"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/listView_faceImages"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:labelFor="@+id/editText_ManagePerson_Description"
        app:layout_constraintRight_toLeftOf="@+id/editText_ManagePerson_Description"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.854" />

    <EditText
        android:id="@+id/editText_ManagePerson_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/description"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@+id/listView_faceImages"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/btn_ManagePerson_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.989"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_ManagePerson_Delete"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/btn_ManagePerson_Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="452dp"
        android:layout_marginTop="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.153" />

    <ImageView
        android:id="@+id/imageView_ManagePerson_SelectedImage"
        android:layout_width="299dp"
        android:layout_height="293dp"
        android:contentDescription="@string/image_desc1"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="92dp" />

    <Button
        android:id="@+id/btn_ManagePerson_RemoveImage"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:text="@string/remove"
        android:layout_marginLeft="104dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_ManagePerson_SelectedImage"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
