<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mementoapp.main.mementoapp.ManageMementosActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btn_ManageMementos_UpdatePeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_people"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btn_ManageMementos_UpdateObjects"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="31dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_ManageMementos_UpdateObjects"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btn_ManageMementos_UpdateObjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_objects"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btn_ManageMementos_UpdateMedication"
        android:layout_marginStart="12dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_ManageMementos_UpdateMedication" />

    <Button
        android:id="@+id/btn_ManageMementos_UpdateMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_medication"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="358dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
