<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.mementoapp.main.mementoapp.ManageObjectActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/tf_ManageObjectActivity_Name"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/object_name"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_ManageObjectActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tf_ManageObjectActivity_Name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintRight_toRightOf="@+id/tf_ManageObjectActivity_Description"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tf_ManageObjectActivity_Description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint ="@string/describe_obj_here"
        app:layout_constraintRight_toLeftOf="@+id/btn_ManageObjectActivity_Update"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ManageObjectActivity_Update"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_labelInstructions"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_ManageObjectActivity_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_ManageObjectActivity_Remove"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/textView_labelInstructions"
        android:layout_width="144dp"
        android:layout_height="26dp"
        android:text="@string/description"
        android:labelFor="@+id/editText_ManageObject_Instructions"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/tf_ManageObjectActivity_Name"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tf_ManageObjectActivity_Description" />

    <TextView
        android:id="@+id/textView_ManageObjectActivity_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/message_will_be_here"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/tf_ManageObjectActivity_Description"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="63dp"
        app:layout_constraintLeft_toLeftOf="@+id/tf_ManageObjectActivity_Description" />

    <Button
        android:id="@+id/btn_ManageObjectActivity_Remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:layout_marginEnd="33dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="12dp" />

    <ListView
        android:id="@+id/listView_ManageObjectActivity"
        android:layout_width="233dp"
        android:layout_height="267dp"
        android:layout_marginBottom="111dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="108dp"
        app:layout_constraintBottom_toTopOf="@+id/tf_ManageObjectActivity_Description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView_ManageObjectActivity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
